# Python_And_Flask_Apps_2024

./: README.md
Flask_Accounts_Dinner_Party/: README.md  app.py  init_db.py  pyproject.toml
Flask_Accounts_Travel_Sites/: README.md  app.py  init_db.py  pyproject.toml
Flask_Adopt_A_Pet/: pyproject.toml
Flask_Base64_Password_Encoding/: README.md  app.py  pyproject.toml
Flask_Codecademy_Dinner_Party/: app.py  pyproject.toml
Flask_Confession_Wall/: README.md  app.py  init_db.py  pyproject.toml
Flask_Cooking_By_Myself/: pyproject.toml
Flask_Drone_List/: pyproject.toml
Flask_Login_Users_App/: README.md  app.py  pyproject.toml
Flask_Message_App/: pyproject.toml
Flask_Microblog/: app.py  pyproject.toml
Flask_MySQL_Blog/: app.py  db.py  init_db.py  pyproject.toml  utilities.py
Flask_MySQL_Blog/static/css/: style.css
Flask_MySQL_Blog/templates/: base.html  create.html  edit.html  index.html  view.html
Flask_Profile_App/: README.md  app.py  (+1 more)
Flask_SQLAlchemy_MySQL_Booklist/: README.md  app.py  config.py  init_db.py  pyproject.toml
Flask_SQLAlchemy_MySQL_Booklist/templates/: base.html  index.html
Flask_SQLite_Blog/: pyproject.toml
Flask_SQLite_Blog/flask_sqlite_blog/: app.py  database.db  init_db.py  schema.sql
Flask_SQLite_Blog/flask_sqlite_blog/static/css/: style.css
Flask_SQLite_Blog/flask_sqlite_blog/templates/: about.html  create.html  edit.html  index.html
Flask_SQLite_Markdown_Notes/: README.md  app.py  init_db.py  pyproject.toml  schema.sql
Flask_SQLite_Markdown_Notes/data/: database.db
Flask_SQLite_Markdown_Notes/static/css/: style.css
Flask_SQLite_Markdown_Notes/templates/: about.html  base.html  index.html
Flask_SQLite_Notes/: pyproject.toml
Flask_SQLite_Notes/flask_sqlite_notes/: app.py  database.db  init_db.py  schema.sql
Flask_SQLite_Notes/flask_sqlite_notes/static/css/: style.css
Flask_SQLite_Notes/flask_sqlite_notes/templates/: about.html  create.html  edit.html  index.html
(+283 files in other folders)
